<resources>
    <string name="app_name">NewSeeker</string>
    <string name="login_welcome">欢迎来到写客</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_button_text">登录</string>
    <string name="login_new_user">新用户</string>
    <string name="login_remember_password">记住密码</string>
    <string name="register_welcome">注册页面</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_button_text">确定</string>
    <string name="register_button_text_two">返回登录页面</string>
</resources>