<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/seeker_bg_login"
    android:orientation="vertical">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/register_welcome"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/registerActivity_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="180dp"
        android:inputType="number"
        android:hint="@string/register_username"
        android:padding="4dp"
        android:singleLine="true"
        android:textSize="15sp"
        android:textCursorDrawable="@drawable/seeker_edit_cursor_color"
        android:theme="@style/seeker_editText_style" />

    <EditText
        android:id="@+id/registerActivity_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerActivity_username"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="4dp"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:padding="4dp"
        android:paddingBottom="4dp"
        android:singleLine="true"
        android:textSize="15sp"
        android:textCursorDrawable="@drawable/seeker_edit_cursor_color"
        android:theme="@style/seeker_editText_style" />

    <Button
        android:id="@+id/registerActivity_confirmButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerActivity_password"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/seeker_button_bg_selector"
        android:text="@string/register_button_text"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <Button
        android:id="@+id/registerActivity_loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerActivity_password"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/seeker_button_bg_selector"
        android:text="@string/register_button_text_two"
        android:textColor="@color/white"
        android:textSize="23sp" />
</RelativeLayout>